--- a/Front-End/package.json
+++ b/Front-End/package.json
@@ -1,19 +1,38 @@
 {
-  "name": "house-predictor",
+  "name": "@lazybrownass/house-price-predictor-ui",
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "description": "Frontend UI for House Price Predictor",
+  "author": "Awab Ul Mujtaba",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lazybrownass/House-Price-Predictor.git"
+  },
+  "keywords": [
+    "house-price",
+    "prediction",
+    "machine-learning",
+    "react",
+    "typescript"
+  ],
+  "bugs": {
+    "url": "https://github.com/lazybrownass/House-Price-Predictor/issues"
+  },
+  "homepage": "https://github.com/lazybrownass/House-Price-Predictor#readme",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "npm run build"
   },
   "dependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "axios": "^1.6.0",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.0",
@@ -38,5 +57,8 @@
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.0",
     "vite": "^5.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
